--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,7 +16,6 @@
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
-    "@eslint/js": "^10.0.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -26,9 +25,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "globals": "^17.3.0",
     "typescript": "^5.2.2",
-    "typescript-eslint": "^8.55.0",
     "vite": "^7.3.1"
   }
 }
